mailing feature implimentation updated

--- a/src/creator/smaple.html
+++ b/src/creator/smaple.html
@@ -1,57 +1,4 @@
-const nodemailer = require("nodemailer");
-
-exports.sendEMail = (from, to, subject, bodyText, bodyHtml) => {
-  return new Promise((resolve, reject) => {
-    let transporter = nodemailer.createTransport({
-      // service: "Gmail",
-      host: "smtp.gmail.com",
-      port: 465,
-      secure: true,
-      auth: {
-        user: process.env.EMAIL,
-        pass: process.env.PASSWORD
-      }
-    });
-
-    let mailOptions = {
-      from: `"Esign"<${from}>`, // sender address
-      to, // list of receivers
-      subject, // Subject line
-      text: bodyText && bodyText, // plain text body
-      html: bodyHtml && bodyHtml, // html body
-      // html: 'Embedded image: <img src="cid:esing@logo"/><br/><img src="cid:symbol@logo"/>',
-      attachments: [{
-        filename: 'Esign.png',
-        path: __dirname + '/images/Esign.png',
-        cid: 'esing@logo' //same cid value as in the html img src
-      }, {
-        filename: 'symbol.png',
-        path: __dirname + '/images/symbol.png',
-        cid: 'symbol@logo' //same cid value as in the html img src
-      }],
-    }
-
-    transporter.sendMail(mailOptions, (error, info) => {
-      if (error) {
-        reject({
-          status: false,
-          message: 'Mail can not sent.',
-          details: error,
-        })
-      } else {
-        resolve({
-          status: true,
-          message: 'Mail Sent.',
-          details: info.response,
-        })
-      }
-    });
-  });
-}
-
-exports.setSignatureEMailBodyHtml = (sender, receiver, link) => {
-  return (`
-  <div id=":12c" class="a3s aXjCH ">
+<div id=":12c" class="a3s aXjCH ">
 	<div style="background-color:#eaeaea;padding:2%;font-family:Helvetica,Arial,Sans Serif"><img style="display:none">
 		<table role="presentation" border="0" cellspacing="0" cellpadding="0" align="center" width="100%" dir="">
 			<tbody>
@@ -61,7 +8,7 @@ exports.setSignatureEMailBodyHtml = (sender, receiver, link) => {
 						<table style="border-collapse:collapse;background-color:#ffffff;max-width:640px">
 							<tbody>
 								<tr>
-									<td style="padding:10px 24px"><img style="border:none" width="116" src="cid:esing@logo" alt="Esign"
+									<td style="padding:10px 24px"><img style="border:none" width="116" src="./Esign.png" alt="Esign"
 											class="CToWUd"></td>
 								</tr>
 								<tr>
@@ -72,14 +19,14 @@ exports.setSignatureEMailBodyHtml = (sender, receiver, link) => {
 												<tr>
 													<td
 														style="padding:28px 36px 36px 36px;border-radius:2px;background-color:#0072A1;color:#ffffff;font-size:16px;font-family:Helvetica,Arial,Sans Serif;width:100%;text-align:center"
-														align="center"><img width="75" height="75" src="cid:symbol@logo" style="width:75px;height:75px"
+														align="center"><img width="75" height="75" src="./symbol.png" style="width:75px;height:75px"
 															class="CToWUd">
 														<table role="presentation" border="0" cellspacing="0" cellpadding="0" width="100%">
 															<tbody>
 																<tr>
 																	<td
 																		style="padding-top:24px;font-size:16px;font-family:Helvetica,Arial,Sans Serif;border:none;text-align:center;color:#ffffff"
-																		align="center"> ${sender.name} sent you a document
+																		align="center"> komal kanada sent you a document
 																		to review and sign. </td>
 																</tr>
 															</tbody>
@@ -94,12 +41,12 @@ exports.setSignatureEMailBodyHtml = (sender, receiver, link) => {
 																					<tr>
 																						<td align="center" height="44"
 																							style="font-size:15px;color:#333333;background-color:#ffc423;font-family:Helvetica,Arial,Sans Serif;font-weight:bold;text-align:center;text-decoration:none;border-radius:2px;background-color:#ffc423;display:block">
-																							<a href=${link}
+																							<a href="https://na3.docusign.net/signing/emails/v1-6a1fb9d4df8c4e938f52e739ca86337cbacb5ae468bd475b832523947feccd96"
 																								style="font-size:15px;color:#333333;background-color:#ffc423;font-family:Helvetica,Arial,Sans Serif;font-weight:bold;text-align:center;text-decoration:none;border-radius:2px;background-color:#ffc423;display:inline-block"
-																								target="_blank"><span style="padding:0px 24px;line-height:44px">
+																								target="_blank"></a><span style="padding:0px 24px;line-height:44px">
 																								REVIEW DOCUMENT
 																							</span></a></td>
-                                          </tr>
+																					</tr>
 																				</tbody>
 																			</table>
 																		</div>
@@ -122,33 +69,22 @@ exports.setSignatureEMailBodyHtml = (sender, receiver, link) => {
 													<td style="padding-bottom:20px">
 														<div
 															style="font-family:monospace;line-height:18px;font-size:15px;color:#333333;font-size:large;">
-															${sender.name} </div>
+															komal kanada </div>
 														<div
 															style="font-family:Helvetica,Arial,Sans Serif;line-height:18px;font-size:15px;color:#666666">
-															<a href="mailto:${sender.email}"
-																target="_blank">${sender.email}</a>
+															<a href="mailto:komal.kanada@bacancytechnology.com"
+																target="_blank">komal.kanada@<wbr>bacancytechnology.com</a>
 														</div>
 													</td>
 												</tr>
 											</tbody>
-                    </table>
-                    <span
-											style="font-family:monospace;font-size:14px;color:#333333;font-size: large;line-height:20px">${receiver.label},<br><br> Please <span class="il">Sign</span>
-                      The Document That Is Shared Through Esign.<br><br> Thank You, ${sender.name}
-                    </span><br>
-                  </td>
-                </tr>
-                <hr/>
-                <tr>
-                  <td style="padding:0px 24px 15px 24px;">
-                    <p style="margin-bottom:1em;font-family:Helvetica,Arial,Sans Serif;font-size:13px;color:#666666;line-height:18px">
-                      <b>Do Not Share This Email</b>
-                      <br> This email contains a secure link to 
-                      <span class="il">DocuSign</span>. Please do not share this email, link, or access code with others.<br>
-                    </p>
-                  </td>
-                </tr>
-                <hr/>
+										</table><span
+											style="font-family:monospace;font-size:14px;color:#333333;font-size: large;line-height:20px">nikhil
+											patel,<br><br> Please <span class="il">Sign</span>
+											Bacancy_Technology_Brochure.<wbr>pdf<br><br> Thank You, komal
+											kanada</span><br>
+									</td>
+								</tr>
 								<tr>
 									<td
 										style="padding:0px 24px 12px 24px;background-color:#ffffff;font-family:monospace;font-size: large;font-size:11px;color:#666666">
@@ -165,5 +101,3 @@ exports.setSignatureEMailBodyHtml = (sender, receiver, link) => {
 		<div class="adL"><span><span><span></span></span></span></div>
 	</div>
 </div>
-  `)
-}
